--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Abbr</title>
-      <link rel="stylesheet" href="./styles.css" />
-    </head>
-    <body>
-      <div className="app"></div>
-      <script type="module" src="./index.html"></script>
-    </body>
-  </html>
+<html lang="eng">
+  <head>
+    <title>Abbr</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="text/javascript" src="bundle.js"></script>
+  </body>
+</html>
