--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="eng">
   <head>
     <title>Abbr</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
