--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Abbr - abbreviate your content" />
+    <meta name="keywords" content="mvp" />
+
     <title>Abbr</title>
+
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
